--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -588,6 +588,24 @@ b, strong {
 	}
 }
 
+.ui-tabs {
+	text-align: center;
+    margin-bottom: 60px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 42px;
+
+    @media (max-width: 992px) {
+      gap: 24px;
+      margin-bottom: 42px;
+    }
+
+    @media (max-width: 599px) {
+      gap: 12px;
+      margin-bottom: 32px;
+    }    
+}
 
 
 .ui-field {	
@@ -802,5 +820,51 @@ b, strong {
 	display: none;
 	@media (max-width: 599px) {
 		display: inline-block;
+	}
+}
+
+.ui-switch {
+	position: relative;
+	display: inline-block;
+	width: 44px;
+	height: 20px;
+
+	input {
+		opacity: 0;
+		width: 0;
+		height: 0;
+
+		&:checked + .ui-switch-slider {
+			background-color: $bgc_pink;
+		}
+
+		&:checked + .ui-switch-slider::before {			
+			transform: translateX(22px);
+		}
+	}
+
+	&-slider {
+		position: absolute;
+		cursor: pointer;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-color: $primary;		
+		transition: 0.3s;
+		border-radius: 20px;
+
+		&:before {
+			position: absolute;
+			content: "";
+			height: 14px;
+			width: 14px;
+			left: 4px;
+			bottom: 3px;
+			background-color: $bgc;
+			-webkit-transition: .4s;
+			transition: .4s;
+			border-radius: 50%;
+		  }
 	}
 }
