--- a/src/css/style.css
+++ b/src/css/style.css
@@ -791,6 +791,11 @@ b, strong {
     font-size: 1.25rem;
     line-height: 155%;
   }
+  .section-title__small-mobile {
+    font-size: 20px;
+    font-size: 1.25rem;
+    line-height: 155%;
+  }
 }
 
 .block-title {
@@ -4775,6 +4780,11 @@ b, strong {
     padding-top: 78px;
   }
 }
+@media (max-width: 920px) {
+  .section-prices__foreign {
+    padding-bottom: 80px;
+  }
+}
 @media (max-width: 768px) {
   .section-prices__foreign {
     padding-top: 64px;
@@ -5005,7 +5015,7 @@ b, strong {
 @media (max-width: 599px) {
   .section-portfolio__foreign {
     padding-top: 48px;
-    padding-bottom: 34px;
+    padding-bottom: 54px;
   }
 }
 
@@ -8795,6 +8805,20 @@ b, strong {
   font-size: 1.75rem;
   max-width: 426px;
 }
+@media (max-width: 1680px) {
+  .feedback-title__foreign {
+    max-width: 100%;
+    width: 100%;
+  }
+}
+@media (max-width: 480px) {
+  .feedback-title__foreign {
+    font-size: 20px;
+    font-size: 1.25rem;
+    line-height: 145%;
+    margin-bottom: 20px;
+  }
+}
 @media (max-width: 768px) {
   .feedback-title__desktop {
     display: none;
@@ -9361,13 +9385,13 @@ b, strong {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-.contacts-links-wrapper:last-child {
+.contacts-links-wrapper:last-child:not(.contacts-links-wrapper__start) {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
 }
 @media (max-width: 1140px) {
-  .contacts-links-wrapper:last-child {
+  .contacts-links-wrapper:last-child:not(.contacts-links-wrapper__start) {
     -webkit-box-pack: unset;
         -ms-flex-pack: unset;
             justify-content: unset;
@@ -11703,6 +11727,16 @@ b, strong {
     padding: 35px 35px 45px;
   }
 }
+@media (max-width: 768px) {
+  .acide .feedback-wrapper {
+    border-radius: 6px;
+  }
+}
+@media (max-width: 599px) {
+  .acide .feedback-wrapper {
+    padding: 40px 12px 48px 12px;
+  }
+}
 .acide .feedback-wrapper__contacts {
   padding-bottom: 50px;
 }
@@ -11783,6 +11817,23 @@ b, strong {
     margin-bottom: 22px;
   }
 }
+.acide .feedback-title__foreign {
+  font-size: 24px;
+  font-size: 1.5rem;
+  line-height: 133.333%;
+  letter-spacing: 0.045rem;
+  margin-bottom: 50px;
+  padding-right: 0;
+}
+@media (max-width: 599px) {
+  .acide .feedback-title__foreign {
+    font-size: 20px;
+    font-size: 1.25rem;
+    letter-spacing: 0.0075rem;
+    line-height: 155%;
+    margin-bottom: 22px;
+  }
+}
 .acide .feedback-form {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -11814,6 +11865,23 @@ b, strong {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+}
+@media (max-width: 1680px) {
+  .acide .feedback-form__foreign {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-column-gap: 30px;
+       -moz-column-gap: 30px;
+            column-gap: 30px;
   }
 }
 @media (max-width: 1366px) {
@@ -11894,9 +11962,29 @@ b, strong {
   margin-right: 0;
   margin-bottom: 40px;
 }
+@media (max-width: 1680px) {
+  .acide .ui-field.feedback-form-field {
+    width: 37%;
+  }
+}
+@media (max-width: 960px) {
+  .acide .ui-field.feedback-form-field {
+    width: calc(50% - 15px);
+  }
+}
+@media (max-width: 599px) {
+  .acide .ui-field.feedback-form-field {
+    width: 100%;
+  }
+}
 @media (max-width: 599px) {
   .acide .ui-field {
     margin-bottom: 20px;
+  }
+}
+@media (max-width: 599px) {
+  .acide .ui-btn {
+    width: 100%;
   }
 }
 
@@ -12055,6 +12143,8 @@ b, strong {
   .steps-card-text {
     font-size: 12px;
     font-size: 0.75rem;
+    line-height: 150%;
+    letter-spacing: 0.0075rem;
   }
 }
 
@@ -12574,7 +12664,7 @@ b, strong {
 }
 @media (max-width: 960px) {
   .foreign-banner {
-    aspect-ratio: 0.96;
+    aspect-ratio: 1;
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
@@ -12584,18 +12674,19 @@ b, strong {
 @media (max-width: 768px) {
   .foreign-banner {
     padding-top: 100px;
-    aspect-ratio: 0.9;
+    aspect-ratio: 0.84;
   }
 }
 @media (max-width: 599px) {
   .foreign-banner {
     padding-top: 46px;
+    aspect-ratio: 0.74;
   }
 }
 @media (max-width: 490px) {
   .foreign-banner {
     padding-top: 36px;
-    aspect-ratio: 0.78;
+    aspect-ratio: 0.67;
   }
 }
 @media (max-width: 360px) {
@@ -12638,7 +12729,7 @@ b, strong {
 }
 @media (max-width: 960px) {
   .foreign-banner-photo {
-    height: 58%;
+    height: 64%;
     width: 100%;
     top: unset;
     bottom: 0;
@@ -12701,8 +12792,28 @@ b, strong {
   text-transform: uppercase;
   margin-bottom: 32px;
 }
+@media (max-width: 960px) {
+  .foreign-banner-title {
+    font-size: 36px;
+    font-size: 2.25rem;
+  }
+}
+@media (max-width: 480px) {
+  .foreign-banner-title {
+    font-size: 22px;
+    font-size: 1.375rem;
+    line-height: 171.364%;
+    letter-spacing: 0.04125rem;
+    margin-bottom: 20px;
+  }
+}
 .foreign-banner-list {
   margin-bottom: 32px;
+}
+@media (max-width: 599px) {
+  .foreign-banner-list {
+    margin-bottom: 20px;
+  }
 }
 
 .section-implantation {
@@ -12739,6 +12850,18 @@ b, strong {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
+@media (max-width: 1280px) {
+  .implantation-wrapper {
+    margin-left: -30px;
+    margin-right: -30px;
+  }
+}
+@media (max-width: 1140px) {
+  .implantation-wrapper {
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+}
 @media (max-width: 960px) {
   .implantation-wrapper {
     margin-left: 0;
@@ -12758,6 +12881,18 @@ b, strong {
   padding-left: 40px;
   padding-right: 40px;
   aspect-ratio: 2.2;
+}
+@media (max-width: 1280px) {
+  .implantation-image {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+@media (max-width: 1140px) {
+  .implantation-image {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 @media (max-width: 960px) {
   .implantation-image {
@@ -12800,7 +12935,7 @@ b, strong {
 }
 @media (max-width: 599px) {
   .implantation-description {
-    margin-bottom: 16px;
+    margin-bottom: 8px;
   }
 }
 .implantation-description-title {
